...
    <string name="new_input_messsage">Wie willst du deinen Zählerstand eintragen?</string>
    <string name="take_photo">Mache ein Foto</string>
    <string name="select_from_gallery">Wähle von deiner Gallerie</string>
    <string name="check_image">Bildüberprüfung</string>
    <string name="check_image_text">Ist das das richtige Bild?</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">Ok</string>
    <string name="check_data_text">Bitte überprüfe die gescannten Daten</string>
    <string name="meter_number">Zählernummer</string>
    <string name="usage">Verbrauch</string>
    <string name="logout_title">Logout?</string>
    <string name="logout_text">Willst du dich wirklich ausloggen?</string>
    <string name="number_hint">Kundennummer</string>
    <string name="wrong_login">Das eingegebene Passwort oder die Kundennummer ist falsch.</string>
    <string name="send_button">Senden</string>
    <string name="issue_textbox_name">Name</string>
    <string name="issue_textbox_email">Email</string>
    <string name="issue_textbox_subject">Betreff</string>
    <string name="issue_textbox_message">Nachricht</string>
    <string name="issue_toolbar_title">Kontakt</string>
...
